# dojo

./: .coveragerc  .gitignore  .sqlfluff  AGENTS.md  ARCHITECTURE.md  Agents.md  CHANGELOG.md  CODE_AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  TODO.md  biome.json  codex_env.sh  codex_vars  cypress.config.cjs  dashboard_mockup.html  direnv_exec  docker-compose.override.yml  docker-compose.yml  flake.nix  log_env  make_it_so  new_sql_rules  playwright.config.ts  pyproject.toml  pyrightconfig.json
.agent/: ARCH_MAP.md  PLANS.md  RESEARCH.md  TOOLS.md  ux.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  README.md  bacon.toml
backend/migrations/: 0001_initial.sql
backend/src/: main.rs
backend/tests/: formulas.rs
cypress/e2e/: README.md  admin_pages.cy.js  budgeting_advanced.cy.js  budgeting_flow.cy.js  transaction_flow.cy.js
cypress/support/: commands.js  e2e.js
docs/: 00_overview.md  01_requirements.md  02_data_model.md  03_api_contract.yml  04_architecture.md  05_migrations.md  06_test_plan.md  deploy.md  investment_tracking_spec.md  test_specs.md
docs/ADR/: 2025-06-20-core-tech-stack.md
frontend/: README.md  package.json  pnpm-lock.yaml
next_up/: aspire_notes.md  behavioral_test_suite.md  budgets_allocations_merge.md  investment_account_detail.md  investment_acct_detail.md  net_worth_dashboard.md  test_specs.md
scripts/: README.md  extract-release-notes  lint  rebuild-caches  release  run-migrations-check  run-tests  search-logs  update-frontend-deps
tests/: conftest.py
(+376 files in other folders)
