[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dojo"
version = "0.1.2"
requires-python = ">=3.12"
dependencies = [
  "duckdb",
  "dash",
  "fastapi",
  "httpx",
  "numpy",
  "pandas",
  "plotly",
  "pydantic",
  "pydantic-settings",
  "pyyaml",
  "scipy",
  "uvicorn[standard]",
  "yfinance",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pyright",
  "hypothesis",
  "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dojo" = ["sql/**/*.sql", "frontend/static/**/*"]

[tool.uv]
preview = true

[tool.uv.extra-build-dependencies]
"multitasking" = ["setuptools"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
  "*/.venv/*",
  "*/dojo.egg-info/*",
  "__pycache__"
]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN", "B", "N", "UP", "RUF"]
extend-ignore = ["ANN101", "ANN102"]
